package.json url corrected

--- a/package.json
+++ b/package.json
@@ -19,5 +19,5 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://myusername.github.io/my-app"
+  "homepage": "https://carpben.github.io/Choose-My-Next-Destination/"
 }
